--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   align-items: center;
   height: 100vh;
   overflow: hidden;
-  background: radial-gradient(circle at center, #222, #000);
+  background-color: white;
 }
 body svg {
   position: absolute;
